fix an issue that i was having with the page overflowing the screen.

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 
 .header {
   grid-column-start: 1;
-  grid-column-end: 21;
+  grid-column-end: 20;
   grid-row-start: 1;
   grid-row-end: 3;
   background-image: linear-gradient(to bottom right, #443C68, #635985);
@@ -67,7 +67,7 @@
 }
 
 .input-field {
-  width: 25vw;
+  width: 20vw;
   height: 20vh;
   display: flex;
   align-items: center;
@@ -77,7 +77,6 @@
 #form {
   display: flex;
   flex-direction: column;
-  margin: 1vh;
   padding: 1vh;
 }
 
